<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text='Press "Start" after setting your own parameters to start receiving location fixes. Be sure to have Location Settings properly set up.'
            android:id="@+id/textView14"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text='Press "Stop" to stop receiving fixes. If you change the parameters, you have to Stop/Start again for them to have effect.'
            android:id="@+id/textView15"
            android:layout_margin="5dp" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp">

        </View>
        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/last_location_fix"
                android:id="@+id/textView"
                android:layout_below="@+id/startButton"
                android:layout_alignParentLeft="false"
                android:layout_centerHorizontal="true"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textStyle="bold|italic"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/time"
                android:id="@+id/textView2"
                android:layout_below="@+id/textView"
                android:layout_toLeftOf="@+id/centerVertical"
                android:gravity="center_vertical|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/latitude"
                android:id="@+id/textView3"
                android:layout_toLeftOf="@+id/centerVertical"
                android:layout_below="@+id/textView2"
                android:gravity="center_vertical|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/longitude"
                android:id="@+id/textView4"
                android:layout_below="@+id/textView3"
                android:layout_toLeftOf="@+id/centerVertical"
                android:gravity="center_vertical|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/time_since_last_fix"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView4"
                android:layout_toLeftOf="@+id/centerVertical"
                android:gravity="center_vertical|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parameters"
                android:id="@+id/textView6"
                android:layout_below="@+id/textView5"
                android:layout_alignParentLeft="false"
                android:layout_centerHorizontal="true"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/priority"
                android:id="@+id/textView7"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignBottom="@+id/spinner"
                android:layout_alignTop="@+id/spinner"
                android:gravity="bottom|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/interval"
                android:id="@+id/textView8"
                android:layout_toLeftOf="@+id/centerVertical"
                android:layout_alignBottom="@+id/interval"
                android:layout_alignTop="@+id/interval"
                android:gravity="bottom|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fastest_interval"
                android:id="@+id/textView9"
                android:layout_toLeftOf="@+id/centerVertical"
                android:layout_alignBottom="@+id/fastestInterval"
                android:layout_alignTop="@+id/fastestInterval"
                android:gravity="bottom|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/num_updates"
                android:id="@+id/textView10"
                android:layout_toLeftOf="@+id/centerVertical"
                android:layout_alignBottom="@+id/numUpdates"
                android:layout_alignTop="@+id/numUpdates"
                android:gravity="bottom|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/smallest_displacement"
                android:id="@+id/textView11"
                android:layout_toLeftOf="@+id/centerVertical"
                android:layout_alignBottom="@+id/smallestDisplacement"
                android:layout_alignTop="@+id/smallestDisplacement"
                android:gravity="bottom|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/expiration_time"
                android:id="@+id/textView12"
                android:layout_toLeftOf="@+id/centerVertical"
                android:layout_alignBottom="@+id/expirationTime"
                android:layout_alignTop="@+id/expirationTime"
                android:gravity="bottom|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/expiration_duration"
                android:id="@+id/textView13"
                android:layout_toLeftOf="@+id/centerVertical"
                android:layout_alignBottom="@+id/expirationDuration"
                android:layout_alignTop="@+id/expirationDuration"
                android:gravity="bottom|right" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:id="@+id/startButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/centerVertical"
                android:layout_margin="5dp" />

            <View
                android:layout_width="5dp"
                tools:background="@android:color/black"
                android:layout_height="100dp"
                android:id="@+id/centerVertical"
                android:layout_alignBottom="@+id/textView13"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:id="@+id/stopButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/centerVertical"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:text="lastFixTime"
                android:id="@+id/lastFixTime"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toRightOf="@+id/centerVertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="latitude"
                android:id="@+id/latitude"
                android:layout_toRightOf="@+id/centerVertical"
                android:layout_alignBottom="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="longitude"
                android:id="@+id/longitude"
                android:layout_toRightOf="@+id/centerVertical"
                android:layout_alignBottom="@+id/textView4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:text="timeSinceLastFix"
                android:id="@+id/timeSinceLastFix"
                android:layout_toRightOf="@+id/centerVertical"
                android:layout_alignBottom="@+id/textView5" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_toRightOf="@+id/centerVertical"
                android:layout_below="@+id/textView6"
                android:entries="@array/priorities_array"
                android:layout_marginRight="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/interval"
                android:layout_below="@+id/spinner"
                android:layout_toRightOf="@+id/centerVertical"
                tools:text="120000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/fastestInterval"
                android:layout_below="@+id/interval"
                android:layout_toRightOf="@+id/centerVertical"
                tools:text="90000" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/numUpdates"
                android:layout_below="@+id/fastestInterval"
                android:layout_toRightOf="@+id/centerVertical"
                tools:text="5" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/smallestDisplacement"
                tools:text="45.5"
                android:layout_below="@+id/textView10"
                android:layout_toRightOf="@+id/centerVertical" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/expirationTime"
                tools:text="560000"
                android:layout_below="@+id/smallestDisplacement"
                android:layout_toRightOf="@+id/centerVertical" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                tools:text="5656565"
                android:id="@+id/expirationDuration"
                android:layout_below="@+id/expirationTime"
                android:layout_toRightOf="@+id/centerVertical" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>